[package]
name = "tabletop-interactive-map-creator"
version = "0.1.0"
authors = ["Samuel Hicks <SamMHicks@hotmail.co.uk>"]
edition = "2018"
description = "An interactive browser based tabletop map creator"
repository = "None"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
grid = "0.2"
log = "0.4"
wasm-bindgen = "0.2"
wasm-logger = "0.2"
web-sys = { version = "0.3", features = ["DomRect", "Element"] }
yew = "0.16"
